trying to fix weird layout issue

--- a/viruses/buttons/buttons.css
+++ b/viruses/buttons/buttons.css
@@ -1,12 +1,12 @@
+body,
 #container {
   width: 100vw;
   height: 100vh;
-  position: relative;
 }
 
 button,
 img {
-  position: absolute;
+  position: fixed;
 }
 
 button {
